=======
CHANGES
=======

1.2 (unreleased)
----------------